Fix white gap on bottom of splash

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,11 @@
 // Core
 @import "base/colors.scss";
 
+// Universal settings
+
+body {
+  background-color: $subfooter;
+}
+
 // Components
 @import "components/*";
