--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -2,3 +2,4 @@ $background-white: #ffffff;
 $background-footer: #353e48;
 $wemeet-red: #e81035;
 $wemeet-light-red: rgb(241, 58, 89);
+$subfooter: #2f363f;
