--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -13,6 +13,7 @@ header.navbar {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  background-color: $background-white;
 }
 
 ul.navbar-main-links {
